--- a/doc/sequence_tagging.ipynb
+++ b/doc/sequence_tagging.ipynb
@@ -18,14 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/jdchoi/workspace/cs329\n"
+      "/Users/jdchoi/workspace/cs329\n",
+      "<class 'pathlib.PosixPath'>\n"
      ]
     }
    ],
@@ -37,7 +38,8 @@
     "while path.name != 'cs329':\n",
     "    path = path.parent\n",
     "\n",
-    "print(path)"
+    "print(path)\n",
+    "print(type(path))"
    ]
   },
   {
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -70,12 +72,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download the [training set](https://raw.githubusercontent.com/emory-courses/cs329/master/dat/pos/wsj-pos.{}.gold.tsv) and the [development set](https://raw.githubusercontent.com/emory-courses/cs329/master/dat/pos/wsj-pos.{}.gold.tsv) for part-of-speech tagging:"
+    "Download the [training set](https://raw.githubusercontent.com/emory-courses/cs329/master/dat/pos/wsj-pos.trn.gold.tsv) and the [development set](https://raw.githubusercontent.com/emory-courses/cs329/master/dat/pos/wsj-pos.dev.gold.tsv) for part-of-speech tagging:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,20 +139,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "38219\n",
       "[('Pierre', 'NNP'), ('Vinken', 'NNP'), (',', ','), ('61', 'CD'), ('years', 'NNS'), ('old', 'JJ'), (',', ','), ('will', 'MD'), ('join', 'VB'), ('the', 'DT'), ('board', 'NN'), ('as', 'IN'), ('a', 'DT'), ('nonexecutive', 'JJ'), ('director', 'NN'), ('Nov.', 'NNP'), ('29', 'CD'), ('.', '.')]\n"
      ]
     }
    ],
    "source": [
     "trn_data = read_pos(path / 'wsj-pos.trn.gold.tsv')\n",
+    "print(len(trn_data))\n",
     "print(trn_data[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "How many tokens are in `trn_data`?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "912344\n",
+      "912344\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = sum([len(sentence) for sentence in trn_data])\n",
+    "print(n)\n",
+    "\n",
+    "n = 0\n",
+    "for sentence in trn_data:\n",
+    "    n += len(sentence)\n",
+    "\n",
+    "print(n)"
    ]
   },
   {
@@ -208,19 +246,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'EX', 'RP', '#', 'NN', ',', 'JJR', 'PDT', '-LRB-', 'VBP', 'LS', 'SYM', 'NNPS', 'VBN', 'WDT', 'PRP$', 'JJ', ':', 'VBG', 'WP', 'VBZ', 'RB', 'DT', '-RRB-', '``', 'RBR', 'IN', 'VBD', 'POS', '$', 'UH', 'FW', 'PRP', \"''\", 'TO', 'RBS', 'JJS', 'CD', '.', 'VB', 'NNP', 'MD', 'WRB', 'CC', 'WP$', 'NNS'}\n",
       "{'#': 0, '$': 1, \"''\": 2, ',': 3, '-LRB-': 4, '-RRB-': 5, '.': 6, ':': 7, 'CC': 8, 'CD': 9, 'DT': 10, 'EX': 11, 'FW': 12, 'IN': 13, 'JJ': 14, 'JJR': 15, 'JJS': 16, 'LS': 17, 'MD': 18, 'NN': 19, 'NNP': 20, 'NNPS': 21, 'NNS': 22, 'PDT': 23, 'POS': 24, 'PRP': 25, 'PRP$': 26, 'RB': 27, 'RBR': 28, 'RBS': 29, 'RP': 30, 'SYM': 31, 'TO': 32, 'UH': 33, 'VB': 34, 'VBD': 35, 'VBG': 36, 'VBN': 37, 'VBP': 38, 'VBZ': 39, 'WDT': 40, 'WP': 41, 'WP$': 42, 'WRB': 43, '``': 44}\n"
      ]
     }
    ],
    "source": [
     "tagset = {pos for sentence in trn_data for token, pos in sentence}\n",
+    "print(tagset)\n",
+    "\n",
     "label_map = {pos:i for i, pos in enumerate(sorted(list(tagset)))}\n",
     "print(label_map)"
    ]
@@ -298,7 +339,7 @@
     "        if p: fs.append('f3' + p[1])\n",
     "\n",
     "        for f in fs:\n",
-    "            feature_map.setdefault(f, len(feature_map)+1)"
+    "            feature_map.setdefault(f, len(feature_map)+1)\n"
    ]
   },
   {
