--- a/doc/sequence_tagging.ipynb
+++ b/doc/sequence_tagging.ipynb
@@ -339,7 +339,7 @@
     "        if p: fs.append('f3' + p[1])\n",
     "\n",
     "        for f in fs:\n",
-    "            feature_map.setdefault(f, len(feature_map)+1)\n"
+    "            feature_map.setdefault(f, len(feature_map)+1)"
    ]
   },
   {
